Colaboratory を使用して作成しました

--- a/ssd_pytorch_demo.ipynb
+++ b/ssd_pytorch_demo.ipynb
@@ -59,7 +59,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "89438584-0162-4e29-c463-4194afe53074"
+        "outputId": "8e80dcc1-b70c-4d85-8353-ce9faf9d2261"
       },
       "source": [
         "!git clone https://github.com/mashyko/ssd.pytorch"
@@ -94,7 +94,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b4c589f-8c08-4cf4-9bed-aa094715c704"
+        "outputId": "00c84020-8c7a-47ce-e195-cf112ca73e7f"
       },
       "source": [
         "!mkdir weights\n",
@@ -108,16 +108,16 @@
           "text": [
             "mkdir: cannot create directory ‘weights’: File exists\n",
             "/content/ssd.pytorch/weights\n",
-            "--2021-02-21 04:23:23--  https://s3.amazonaws.com/amdegroot-models/vgg16_reducedfc.pth\n",
-            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.217.73.70\n",
-            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.217.73.70|:443... connected.\n",
+            "--2021-03-02 00:56:29--  https://s3.amazonaws.com/amdegroot-models/vgg16_reducedfc.pth\n",
+            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.225.187\n",
+            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.225.187|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 81938914 (78M) [binary/octet-stream]\n",
-            "Saving to: ‘vgg16_reducedfc.pth.2’\n",
+            "Saving to: ‘vgg16_reducedfc.pth.1’\n",
             "\n",
-            "vgg16_reducedfc.pth 100%[===================>]  78.14M  35.9MB/s    in 2.2s    \n",
+            "vgg16_reducedfc.pth 100%[===================>]  78.14M  48.1MB/s    in 1.6s    \n",
             "\n",
-            "2021-02-21 04:23:26 (35.9 MB/s) - ‘vgg16_reducedfc.pth.2’ saved [81938914/81938914]\n",
+            "2021-03-02 00:56:31 (48.1 MB/s) - ‘vgg16_reducedfc.pth.1’ saved [81938914/81938914]\n",
             "\n"
           ],
           "name": "stdout"
@@ -131,7 +131,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "769de810-dd58-4d42-b3f4-3ff0b5ea9c91"
+        "outputId": "9b487d50-d025-4464-e84b-0a5472e40743"
       },
       "source": [
         "!wget https://s3.amazonaws.com/amdegroot-models/ssd300_mAP_77.43_v2.pth"
@@ -141,16 +141,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2021-02-21 04:23:26--  https://s3.amazonaws.com/amdegroot-models/ssd300_mAP_77.43_v2.pth\n",
-            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.217.73.70\n",
-            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.217.73.70|:443... connected.\n",
+            "--2021-03-02 00:56:31--  https://s3.amazonaws.com/amdegroot-models/ssd300_mAP_77.43_v2.pth\n",
+            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.225.187\n",
+            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.225.187|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 105151288 (100M) [application/x-www-form-urlencoded]\n",
-            "Saving to: ‘ssd300_mAP_77.43_v2.pth.2’\n",
+            "Saving to: ‘ssd300_mAP_77.43_v2.pth.1’\n",
             "\n",
-            "ssd300_mAP_77.43_v2 100%[===================>] 100.28M  35.7MB/s    in 2.8s    \n",
+            "ssd300_mAP_77.43_v2 100%[===================>] 100.28M  42.7MB/s    in 2.3s    \n",
             "\n",
-            "2021-02-21 04:23:29 (35.7 MB/s) - ‘ssd300_mAP_77.43_v2.pth.2’ saved [105151288/105151288]\n",
+            "2021-03-02 00:56:34 (42.7 MB/s) - ‘ssd300_mAP_77.43_v2.pth.1’ saved [105151288/105151288]\n",
             "\n"
           ],
           "name": "stdout"
@@ -164,7 +164,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bb3259f3-d44c-4d8e-e2ae-2e23b299a0bb"
+        "outputId": "ea1e6739-6482-48e7-8aae-5a1841f8f7d7"
       },
       "source": [
         "%cd .. \n",
@@ -192,25 +192,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nQoCsbcZxMNp",
-        "outputId": "5629dda2-a3f7-434c-a591-dfbb66e60793"
+        "outputId": "1930f7e3-97d4-451d-f90e-46ee549de008"
       },
       "source": [
         "# need to downgrade pytorch and pillow < 7\n",
         "\n",
         "!pip install torch==1.0.0 torchvision==0.2.1\n",
-        "!pip install \"pillow<7\"\n"
+        "!pip install pillow==5.0.0\n"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: torch==1.0.0 in /usr/local/lib/python3.6/dist-packages (1.0.0)\n",
-            "Requirement already satisfied: torchvision==0.2.1 in /usr/local/lib/python3.6/dist-packages (0.2.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision==0.2.1) (1.15.0)\n",
-            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision==0.2.1) (6.2.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torchvision==0.2.1) (1.19.5)\n",
-            "Requirement already satisfied: pillow<7 in /usr/local/lib/python3.6/dist-packages (6.2.2)\n"
+            "Requirement already satisfied: torch==1.0.0 in /usr/local/lib/python3.7/dist-packages (1.0.0)\n",
+            "Requirement already satisfied: torchvision==0.2.1 in /usr/local/lib/python3.7/dist-packages (0.2.1)\n",
+            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.7/dist-packages (from torchvision==0.2.1) (5.0.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from torchvision==0.2.1) (1.15.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from torchvision==0.2.1) (1.19.5)\n",
+            "Requirement already satisfied: pillow==5.0.0 in /usr/local/lib/python3.7/dist-packages (5.0.0)\n"
           ],
           "name": "stdout"
         }
@@ -264,7 +264,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7c0da67-e9b2-4c7d-ac1f-427e6117a0df"
+        "outputId": "8c7ce801-206e-4725-bd7a-b47086e40ad6"
       },
       "source": [
         "net = build_ssd('test', 300, 21)    # initialize SSD\n",
@@ -308,7 +308,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 470
         },
-        "outputId": "b59fb56e-425f-49cf-86fb-1ec1609f7d21"
+        "outputId": "932c3540-d4aa-4e78-d167-40e63cb0817c"
       },
       "source": [
         "image = cv2.imread('./data/dog.jpg', cv2.IMREAD_COLOR)  # uncomment if dataset not downloaded\n",
@@ -363,7 +363,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 286
         },
-        "outputId": "aa38c8d1-7ffc-4205-830c-5d797ef92a84"
+        "outputId": "14a37fb7-79bb-40ae-d138-11a64d00d4ae"
       },
       "source": [
         "x = cv2.resize(image, (300, 300)).astype(np.float32)\n",
@@ -441,7 +441,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 470
         },
-        "outputId": "ddae0262-b51b-4287-8e94-562c160ddc12"
+        "outputId": "8c30999e-c016-4433-9b68-4869ad7128ce"
       },
       "source": [
         "from data import VOC_CLASSES as labels\n",
